--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,13 @@
 	font-weight: normal;
 }
 
+@media (min-width: 1200px) {
+	.container {
+	    width: 1200px;
+	}
+}
+
+
 h1, h2, h3, h4, h5, p {
 	margin: 0;
 }
@@ -722,6 +729,10 @@ INDEX
 	background-color: #fff;
 }
 
+.index-constBlocks .container {
+	width: 1170px;
+}
+
 .index-constBlocks .row{
 	margin: 0 -30px;
 }
@@ -1100,6 +1111,9 @@ INDEX
 
 .index-design .design-img {
 	display: block;
+	width: 480px;
+	height: 300px;
+	background: url(../img/design.jpg);
 	position: absolute;
 	right: 15px;
 	top: 60px;
@@ -1144,7 +1158,7 @@ INDEX
 
 .index-design .design-slide-paginator {
 	position: absolute;
-	top: -293px;
+	top: -301px;
 	left: 220px;
 }
 
@@ -1228,6 +1242,7 @@ INDEX
 .index-construction .subtitle {
 	color: #37474f;
 	margin-bottom: 20px;
+	font-size: 30px;
 }
 
 
@@ -1291,38 +1306,9 @@ INDEX
 }
 
 .index-contact .contact-content {
-	margin-top: 80px;
-	padding-bottom: 90px;
+	margin-top: 95px;
+	padding-bottom: 99px;
 }
-
-.index-contact .img-wrap{
-	margin: 40px auto;
-	width: 430px;
-}
-.index-contact .img-wrap.with-bg{
-	background: url(../img/priv-form-left-bgl.jpg) no-repeat left center,
-				url(../img/priv-form-left-bgr.jpg) no-repeat right center;
-}
-.index-contact .img-wrap .img-border{
-	position: relative;
-	display: inline-block;
-	-webkit-box-shadow: 0 -25px 25px -25px rgba(0,0,0,.2),
-						0 25px 25px -25px rgba(0,0,0,.2);
-	box-shadow: 0 -25px 25px -25px rgba(0,0,0,.2),
-				0 25px 25px -25px rgba(0,0,0,.2);
-}
-.index-contact .img-wrap .img-border::before {
-		content: "";
-		position: absolute;
-		top: 0;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		-webkit-box-shadow: inset 0 0 0 8px #37474f,
-				inset 0 0 0 16px #fff;
-		box-shadow: inset 0 0 0 8px #37474f,
-				inset 0 0 0 16px #fff;
-	   } 
 
 .index-contact .title {
 	text-align: center;
@@ -1441,46 +1427,32 @@ INDEX
 	margin-bottom: 17px;
 }
 
-.index-contact .contact-content{
-	position: relative;
-}
-.index-contact .no-relative{
-	position: static;
-	margin-top: -27%;
-}
 .index-contact .line-text {
-	position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 90px;
-    margin: auto;
+	position: relative;
+    top: -220px;
 	font-size: 18px;
 	color: #ffffff;
     width: 34px;
-    background-color: #b1006b;
-    z-index: 2;
-    line-height: 50px;
-    height: 50px;
+    margin: 0 auto;
 }
 
-.index-contact .no-relative:after {
+.index-contact .line-text:after {
 	content: "";
-	top: 0;
+	top: 30px;
 	left: 50%;
 	position: absolute;
 	width: 1px;
-	height:  80%;
+	height:  156px;
 	background-color: #b33a85;
 }
 
-.index-contact .no-relative:before {
+.index-contact .line-text:before {
 	content: "";
-	bottom: 80px;
+	bottom: 30px;
 	left: 50%;
 	position: absolute;
 	width: 1px;
-	height:  38%;
+	height:  156px;
 	background-color: #b33a85;
 }
 
@@ -1496,10 +1468,155 @@ INDEX
 	float: left;
 }
 
-.index-blocks .right {
+.index-blocks .link {
 	float: right;
+	margin-top: 6px;
 	font-size: 14px;
 	color: #b1006b;
+}
+
+.index-blocks .text-wrapp {
+	margin-top: 24px;
+	padding: 0 30px;
+	height: 510px; 
+	background-color: #ffffff;
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	-webkit-box-shadow: 0px 0px 34px 4px rgba(55,71,79,0.1);
+	-moz-box-shadow: 0px 0px 34px 4px rgba(55,71,79,0.1);
+	box-shadow: 0px 0px 34px 4px rgba(55,71,79,0.1);
+}
+
+.index-blocks .blocks-img {
+	margin-left: -30px; 
+	width: 370px;
+	height: 210px;
+}
+
+.index-blocks .blocks-img-1 {
+	background: url(../img/blocks_1.jpg);
+}
+
+.index-blocks .blocks-img-2 {
+	background: url(../img/blocks_2.jpg);
+}
+
+.index-blocks .date {
+	display: inline-block;
+	color: #90a4ae;
+	margin: 24px 0 24px 0;
+}
+
+.index-blocks .subtitle {
+	font-family: GothamProMedium;
+	color: #37474f;
+	margin-bottom: 22px;
+}
+
+.index-blocks .text {
+	color: #37474f;
+}
+
+.index-blocks .list {
+	margin-top: 10px;
+}
+
+.index-blocks li:first-child {
+	margin-bottom: 10px;
+}
+
+.index-blocks li {
+	color: #37474f;
+}
+
+.index-blocks .dot {
+	display: inline-block;
+	margin: 0 16px 18px 0;
+	width: 4px;
+	height: 4px;
+	background: url(../img/dot.png);
+}
+
+.index-blocks .video-img {
+	position: relative;
+	margin-left: -30px;
+	width: 370px;
+	height: 320px;
+	background: url(../img/blocks_video.jpg) no-repeat;
+}
+
+.index-blocks .video-img .play-btn {
+	margin: -32px auto 0 -43.5px;
+	width: 87px;
+	height: 64px;
+	background: url(../img/play.png);
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	cursor: pointer;
+}
+
+.index-blocks table {
+	width: 100%;
+}
+
+.index-blocks .video-text {
+	margin-top: 25px;
+}
+
+.index-book {
+	padding-top: 46px;
+}
+
+.index-book .book-img {
+	margin: 14px 0 0 36px;
+}
+
+.index-book .col-md-12 .block {
+	position: absolute;
+	left: 15px;
+	right: 15px;
+	height: 186px;
+	border: 6px solid #e1e5e8;
+}
+
+.index-book .head {
+	margin-top: 22px;
+}
+
+.index-book .left {
+	float: left;
+}
+
+.index-book .title {
+	font-size: 30px;
+	color: #37474f;
+	margin-bottom: 12px;
+}
+
+.index-book .title span {
+	font-family: GothamProMedium;
+}
+
+.index-book {
+	color: #90a4ae;
+}
+
+.index-book table {
+	width: 100%;
+}
+
+.index-book .get-book {
+	float: right;
+	margin-right: 27px;
+	width: 190px;
+	height: 53px;
+	color: #ffffff;
+}
+
+.index-book .text {
+	margin-top: 22px;
+	color: #37474f;
 }
 
 
@@ -1507,7 +1624,7 @@ INDEX
 BLOCK_SEO
 ========*/
 .block-seo {
-	padding: 95px 0;
+	padding: 47px 0 95px 0;
 	background: #f2f6f8;
 }
 .block-seo .seo-head{
@@ -1526,7 +1643,7 @@ BLOCK_SEO
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px) {
 	.container{
-		width: 700px;
+		max-width: 700px;
 	}
 
 	/*===========
@@ -1685,24 +1802,7 @@ BLOCK_SEO
 
 
 
-	/*index-contact*/
-	.index-contact .img-wrap{
-		width: 290px;
-	}
-	.index-contact .title{
-		font-size: 23px;
-		height: 100px;
-	}
-	.index-contact .title br,
-	.index-contact .slogan br{
-		display: none;
-	}
-	.index-contact .no-relative{
-		display: none;
-	}
-	.index-contact .slogan{
-		padding: 0 40px;
-	}
+
 }
 
 /* Medium Devices, Desktops */
@@ -1713,8 +1813,15 @@ BLOCK_SEO
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
 
+	.col-md-1, .col-md-2, .col-md-3, .col-md-4,
+	.col-md-5, .col-md-6, .col-md-7, .col-md-8,
+	.col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+
 	.container{
-		max-width: 320px;
+		max-width: 700px;
 		padding: 0 25px;
 	}
 
@@ -1746,6 +1853,254 @@ BLOCK_SEO
 		background-color: #96005b !important;
 	}
 
+	/*INDEX*/
+
+	.index-slider .slide .slogan {
+		text-align: center;
+		margin: 223px 0 0 0;
+		width: 100%;
+		float: none; 
+	}
+	
+	.index-slider .slide .container {
+		max-width: 700px;
+		padding: 0 34px;
+	}
+
+	.index-slider .slide .title {
+		font-size: 48px;
+	}	
+
+	.index-slider .slide .subtitle {
+		font-size: 23px;
+	}
+
+	.index-slider .slide-paginator {
+		width: 65px;
+		left: 50%;
+		bottom: 62px;
+		margin-left: -32.5px;
+	}
+
+	.index-const .construct-title {
+		margin-top: 68px;
+		font-size: 36px;
+	}
+
+	.index-const .construct-price,
+	.index-readyProjects .title,
+	.index-design .title,
+	.index-construction .title,
+	.index-construction .ready-title,
+	.block-seo .seo-head {
+		font-size: 36px;
+
+	}
+
+	.index-const .construct-text {
+		font-size: 16px;
+	}
+
+	.index-const .construct-text br {
+		display: none;
+	}
+
+	.index-const .construct-line {
+		margin: 45px auto 43px auto;
+	}
+
+	.index-const .construct-secondTitle {
+		font-size: 24px;
+	}
+
+	.index-const .construct-subtitle,
+	.index-design .slogan,
+	.index-construction .slogan {
+		font-size: 20px;
+	}
+
+	.index-readyProjects .title {
+		margin-bottom: 20px;
+	}
+
+	.index-readyProjects .slogan {
+		font-size: 20px;
+		margin-bottom: 18px;
+	}
+
+	.index-readyProjects .slide-container {
+		margin-top: 17px;
+	}
+
+	.index-readyProjects .project-catalog .catalog-img {
+		display: none;
+	}
+
+	.index-design .title {
+		margin-top: 53px;
+	}
+
+	.index-design .slider-title {
+		margin-top: 58px;
+	}
+
+	.index-design .design-img {
+		width: 299px;
+		background-position-x: -95px;
+	}
+
+	.index-design .design-img {
+		top: 40px;
+	}
+
+	.index-design .design-bg {
+		max-width: 300px;
+		height: 380px;
+	}
+
+	.index-construction .title {
+		margin-top: 56px;
+	}
+
+	.index-contact .line-text {
+		display: none;
+	}
+
+	.index-construction .subtitle,
+	.index-contact .title,
+	.index-book .title  {
+		font-size: 24px;
+	}
+
+	.index-construction .slogan {
+		margin-bottom: 45px;
+	}
+
+	.index-construction .subtitle {
+		margin-bottom: 29px;
+	}
+
+	.index-construction .prime-hr {
+		margin: 76px 0 79px 0;
+	}
+
+	.index-construction .ready-title {
+		margin-bottom: 10px;
+	}
+
+	.index-construction {
+		padding-bottom: 77px;
+	}
+
+	.index-contact .form-float {
+	    margin-top: 20px;
+	}
+
+	.index-contact .contact-content {
+		margin-top: 53px;
+		padding-bottom: 77px;
+	}
+
+	.index-blocks {
+		margin-top: 80px;
+	}
+
+	.index-blocks .text-wrapp {
+		height: 260px;
+	}
+
+	.index-blocks .blocks-img,
+	.index-blocks .video-img {
+		float: left;
+		width: 250px;
+		height: 260px;
+		margin-right: 20px;
+	}
+
+	.index-blocks .blocks-img-1 {
+		background: url(../img/blocks_1_planshet.jpg);
+	}
+
+	.index-blocks .blocks-img-2 {
+		background: url(../img/blocks_2_planshet.jpg);
+	}
+	
+	.index-blocks .video-img {
+		background: url(../img/blocks_video_planshet.jpg);
+	}
+
+	.index-blocks .col-md-4:nth-child(2) .text br {
+		display: none;
+	}
+
+	.index-blocks .right-block {
+		float: right;
+	}
+
+	.index-blocks .col-md-4:nth-child(2),
+	.index-blocks .col-md-4:nth-child(3) {
+		margin-top: 50px;
+	}
+
+	.index-blocks .video-text {
+		float: left;
+	}
+
+	.index-book .book-img {
+		display: none;
+
+	}
+
+	.index-book .left {
+		margin: 0 15px 0 30px;
+	}
+
+	.index-book  .subtitle {
+		font-size: 16px;
+	}
+
+	.index-book .get-book {
+		max-width: 190px;
+		margin-right: 30px;
+	}
+
+
+
+	.index-book .text {
+		font-size: 14px;
+		margin: 22px 30px 0 30px;
+	}
+
+	.index-book .text br {
+		display: none;
+	}
+
+	.index-book .row {
+		position: relative;
+		padding-bottom: 30px;
+	}
+
+	.index-book .col-md-12 {
+		position: static;
+	}
+
+	.index-book .col-md-12 .block {
+	    top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		height: auto;
+	}
+
+	.block-seo {
+		padding: 36px 0 73px 0;
+	}
+
+
+	.block-seo .seo-text p {
+		font-size: 14px;
+	}
+
 	/*===========
 	FOOTER_MOBILE
 	===========*/
@@ -1762,9 +2117,6 @@ BLOCK_SEO
 	.footer .copyright p + p{
 		margin-top: 20px;
 	}
-
-
-
 }
 
 /* Extra Small Devices, Phones */ 
