--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ BLOCKS
 
 /*PAGINATION*/
 .pagination{
-	margin: 25px -15px; /**/
+	margin: 25px 0px; /**/
 }
 .pagination li a,
 .pagination li.active a,
@@ -382,6 +382,7 @@ HEADER_BOT
 }
 .megamenu-sub{
 	width: 100%;
+	margin: 0 15px;
 	padding: 0 30px;
 	border: none;
 	-webkit-box-shadow: 0 0 35px rgba(0,0,0,.2);
@@ -492,6 +493,7 @@ FOOTER
 
 .footer-bot{
 	padding-top: 25px;
+	overflow: hidden;
 }
 .footer-bot .working-time{
 	padding-left: 0;
@@ -547,7 +549,8 @@ FOOTER
 }
 
 .footer .copyright{
-	margin: 40px -15px;
+	overflow: hidden;
+	margin: 40px 0;
 }
 .footer .dev-ico:before{
 	content: "";
@@ -1306,9 +1309,38 @@ INDEX
 }
 
 .index-contact .contact-content {
-	margin-top: 95px;
-	padding-bottom: 99px;
+	margin-top: 80px;
+	padding-bottom: 90px;
 }
+
+.index-contact .img-wrap{
+	margin: 40px auto;
+	width: 430px;
+}
+.index-contact .img-wrap.with-bg{
+	background: url(../img/priv-form-left-bgl.jpg) no-repeat left center,
+				url(../img/priv-form-left-bgr.jpg) no-repeat right center;
+}
+.index-contact .img-wrap .img-border{
+	position: relative;
+	display: inline-block;
+	-webkit-box-shadow: 0 -25px 25px -25px rgba(0,0,0,.2),
+						0 25px 25px -25px rgba(0,0,0,.2);
+	box-shadow: 0 -25px 25px -25px rgba(0,0,0,.2),
+				0 25px 25px -25px rgba(0,0,0,.2);
+}
+.index-contact .img-wrap .img-border::before {
+		content: "";
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		-webkit-box-shadow: inset 0 0 0 8px #37474f,
+				inset 0 0 0 16px #fff;
+		box-shadow: inset 0 0 0 8px #37474f,
+				inset 0 0 0 16px #fff;
+	   } 
 
 .index-contact .title {
 	text-align: center;
@@ -1427,35 +1459,48 @@ INDEX
 	margin-bottom: 17px;
 }
 
-.index-contact .line-text {
+.index-contact .contact-content{
 	position: relative;
-    top: -220px;
+}
+.index-contact .no-relative{
+	position: static;
+	margin-top: -27%;
+}
+.index-contact .line-text {
+	position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 90px;
+    margin: auto;
 	font-size: 18px;
 	color: #ffffff;
     width: 34px;
-    margin: 0 auto;
+    background-color: #b1006b;
+    z-index: 2;
+    line-height: 50px;
+    height: 50px;
 }
 
-.index-contact .line-text:after {
+.index-contact .no-relative:after {
 	content: "";
-	top: 30px;
+	top: 0;
 	left: 50%;
 	position: absolute;
 	width: 1px;
-	height:  156px;
+	height:  80%;
 	background-color: #b33a85;
 }
 
-.index-contact .line-text:before {
+.index-contact .no-relative:before {
 	content: "";
-	bottom: 30px;
+	bottom: 80px;
 	left: 50%;
 	position: absolute;
 	width: 1px;
-	height:  156px;
+	height:  38%;
 	background-color: #b33a85;
 }
-
 
 .index-blocks {
 	padding-top: 88px;
@@ -1566,6 +1611,7 @@ INDEX
 
 .index-book {
 	padding-top: 46px;
+	margin-bottom: -40px;
 }
 
 .index-book .book-img {
@@ -1624,7 +1670,7 @@ INDEX
 BLOCK_SEO
 ========*/
 .block-seo {
-	padding: 47px 0 95px 0;
+	padding: 95px 0;
 	background: #f2f6f8;
 }
 .block-seo .seo-head{
@@ -1643,7 +1689,7 @@ BLOCK_SEO
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px) {
 	.container{
-		max-width: 700px;
+		max-width: 730px;
 	}
 
 	/*===========
@@ -1797,10 +1843,29 @@ BLOCK_SEO
 		left: 0;
 	}
 	.footer .copyright{
-		margin: 30px -15px 25px;
+		margin: 30px 0 25px;
 	}
 
 
+
+	/*index-contact*/
+	.index-contact .img-wrap{
+		width: 290px;
+	}
+	.index-contact .title{
+		font-size: 23px;
+		height: 100px;
+	}
+	.index-contact .title br,
+	.index-contact .slogan br{
+		display: none;
+	}
+	.index-contact .no-relative{
+		display: none;
+	}
+	.index-contact .slogan{
+		padding: 0 40px;
+	}
 
 
 }
@@ -1822,9 +1887,11 @@ BLOCK_SEO
 
 	.container{
 		max-width: 700px;
-		padding: 0 25px;
+		padding: 0 10px;
 	}
-
+	.row{
+		margin: 0 -10px;
+	}
 	/*===========
 	HEADER_MOBILE
 	===========*/
@@ -1841,8 +1908,8 @@ BLOCK_SEO
 	.megamenu li a{
 		line-height: 40px;
 	}
-	.header .header-top-menu li a{
-		max-width: 300px;
+	.megamenu>li.open>a{
+		padding-left: 15px;
 	}
 	.header .header-top-menu .megamenu-sub li a{
 		line-height: 20px;
@@ -1851,6 +1918,11 @@ BLOCK_SEO
 	}
 	.megamenu-sub{
 		background-color: #96005b !important;
+		margin: 0;
+		padding-left: 10px !important;
+	}
+	.header-top .navbar-header{
+		margin-left: -10px;
 	}
 
 	/*INDEX*/
